CTA styles, responsiveness and fix navbar overlaping with CTA on mobile.

--- a/frontend/src/components/styles/header.module.css
+++ b/frontend/src/components/styles/header.module.css
@@ -83,7 +83,7 @@ a {
 
 @media screen and (max-width: 768px) {
   .container {
-    z-index: 0;
+    z-index: 100;
   }
   .header {
     margin-top: 0;
