--- a/frontend/src/pages/home/container/styles/cta.module.css
+++ b/frontend/src/pages/home/container/styles/cta.module.css
@@ -1,3 +1,7 @@
+.wrapper {
+  z-index: -1;
+}
+
 .wave {
   width: 100%;
   height: auto;
@@ -29,16 +33,17 @@
 .cta_title h2 {
   color: #fff;
   font-weight: 700;
-  font-size: 1.5rem;
+  font-size: 2rem;
+  text-align: center;
+  margin-bottom: 3rem;
+  margin-top: 3rem;
+  font-style: italic;
 }
 
 .mailbox {
   width: 100%;
-  max-width: 30.875rem;
-  margin-top: 3rem;
-  margin-top: 0.75rem;
-  margin-left: auto;
-  margin-right: auto;
+  max-width: 30rem;
+  margin: 0 auto;
 }
 
 .email {
@@ -48,29 +53,52 @@
   padding-bottom: 0.75rem;
   border-radius: 30px;
   width: 100%;
+  background-color: transparent;
+  border: 1px solid #fca26e;
+  margin-bottom: 1rem;
+  font-size: 1rem;
+  font-weight: 700;
+  text-align: center;
 }
 
 .email::placeholder {
-  color: green;
+  color: white;
+}
+
+.email:focus {
+  color: white;
 }
 
 .email_button {
   padding-left: 1rem;
   padding-right: 1rem;
   padding-top: 0.75rem;
-  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
   border-radius: 30px;
   width: 100%;
-  background-color: green;
-  color: white;
-  font-weight: 700;
+  background-color: #fca26e;
+  color: #14281f;
+  font-weight: 600;
+  text-transform: uppercase;
+  font-size: 1.3rem;
+  border: none;
+  cursor: pointer;
 }
 
 .cta_title p {
-  color: lightgreen;
-  font-size: 0.875rem;
+  color: #fca26e;
+  font-size: 1.3rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
   line-height: 1.75;
   margin-top: 1.5rem;
+  text-align: center;
+}
+
+.cta_title p span {
+  font-weight: 700;
+  font-style: italic;
+  color: white;
 }
 
 .image_container {
@@ -89,7 +117,7 @@
 .shape_1 {
   width: 50%;
   height: 50%;
-  background-color: #fc5a5a;
+  background-color: #f5751d;
   border-radius: 0.5rem;
   position: absolute;
   top: 10%;
@@ -110,7 +138,7 @@
 .image_wrapper {
   width: 100%;
   border-radius: 30px;
-  background-color: #fff;
+  background-color: #fca26e;
   padding: 0.75rem;
   z-index: 1;
   position: relative;
@@ -120,6 +148,7 @@
   width: 100%;
   object-fit: cover;
   object-position: center;
+  border-radius: 18px;
 }
 
 .image_wrapper div {
@@ -135,23 +164,32 @@
     font-size: 2.25rem;
     text-align: center;
     line-height: 1.5;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
   }
 
   .mailbox {
-    margin-top: 0;
+    width: 100%;
     display: flex;
     align-items: center;
-    margin-left: 0.5rem;
+  }
+
+  .email {
+    margin-bottom: 0;
+    width: 70%;
   }
 
   .email_button {
-    width: fit-content;
     white-space: no-wrap;
+    font-size: 1rem;
+    margin-left: 1rem;
+    margin-top: 0;
+    width: 30%;
   }
 
   .cta_title p {
     text-align: center;
-    font-size: 1rem;
+    font-size: 1.3rem;
   }
 
   .image_container {
@@ -161,6 +199,19 @@
 
   .image_wrapper img {
     height: 24rem;
+  }
+
+  .image_text h2 {
+    color: #14281f;
+    font-family: "Open Sans", sans-serif;
+    font-weight: 800;
+    margin-bottom: 0.3rem;
+    font-size: 1.8rem;
+  }
+
+  .image_text p {
+    font-size: 1.125rem;
+    font-weight: 400;
   }
 }
 
@@ -178,25 +229,22 @@
   }
 
   .mailbox {
+    width: 100%;
     margin-left: 0;
     margin-right: 0;
   }
 
   .cta_title p {
     text-align: left;
+    padding: 0;
   }
 
   .image_container {
     grid-column: span 6;
     order: 2;
+    margin-bottom: 0;
   }
 
-  .image_wrapper img {
-    height: 13rem;
-  }
-}
-
-@media screen and (min-width: 1280px) {
   .image_wrapper img {
     height: 13rem;
   }
